--- a/core/templates/core/base2.html
+++ b/core/templates/core/base2.html
@@ -20,28 +20,25 @@
 </head>
 <body>
     {% block header %}{% endblock %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" dir="rtl">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#!"><span style="color: red;">نیو</span>کالا</a>
+            <a class="navbar-brand" href="/"><span style="color: red;">نیو</span>کالا</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">نداریم</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">نیست</a></li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">ناموجود</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">ناموجود</a></li>
-                            <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="#!">ناموجود</a></li>
-                            <li><a class="dropdown-item" href="#!">ای خدا</a></li>
-                        </ul>
-                    </li>
-                </ul>
                 {% if request.user.is_authenticated %}
-                    <form class="d-flex">
-                        <a href="{% url 'item:addnewitem' %}" class="btn btn-outline-dark">بروز</a>
-                    </form>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'item:addnewitem' %}">افزودن کالا</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">دسته بندی ها</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" dir="rtl">
+                                {% block categorys %}
+                                {% endblock %}
+                            </ul>
+                        </li>
+                    </ul>
+                {% endif %}
+
+                {% if request.user.is_authenticated %}
                     <form class="d-flex">
                         <a href="{% url 'dashboard:index' %}" class="btn btn-outline-dark">داشبورد</a>
                     </form>
