--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -42,3 +42,9 @@
     </div>
 </section>
 {% endblock %}
+
+{% block categorys %}
+    {% for category in categorys %}
+        <li><a class="dropdown-item" href="#">{{ category.name }}</a></li>
+    {% endfor %}
+{% endblock %}
