add name of title

--- a/core/templates/core/base2.html
+++ b/core/templates/core/base2.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/styles.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %} | FATHI</title>
+    <title>{% block title %}{% endblock %} | New KALA</title>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
