add app cart for add cart to site

--- a/core/templates/core/base2.html
+++ b/core/templates/core/base2.html
@@ -28,6 +28,7 @@
                 {% if request.user.is_authenticated %}
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'item:addnewitem' %}">افزودن کالا</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'item:addnewitem' %}">سبد خرید</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">دسته بندی ها</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown" dir="rtl">
